# FPGE

./: .cproject  .project  CMakeLists.txt  License.txt  README.md  make_release.bat
doc/: FPGE.gpl  changelog.txt  file_fm_set.txt  fpge01.txt  fpge05.txt  fpge_faq.txt  pg2_to_pzc_conversion_howto.txt  tiles.txt  tiles_txt_description.txt  todo_fpge.txt
release/: bmp2ctry.txt  countries.txt  icons.txt  mapfrg.txt  paccl2pgcl.txt  pacmt2pgmt.txt  pg2c2pgc.txt  pg2cl2pgcl.txt  pg2tt2pgtr.txt  pg2tt2pgtt.txt  pgc2pzcc.txt  pgtt2pzctt.txt  pgu2pzcu.txt  tiles.txt  tt2tiles.txt
src/: FPGE.exe.Manifest  FPGE_private.h  FPGE_private.rc  ag.c  ag.h  app6.c  app6.h  bintables.c  bintables.h  callback.c  callback.h  class.c  class.h  cli.c  cli.h  config.c  config.h  cyclic_buf.c  cyclic_buf.h  drawmap.c  drawmap.h  filename.c  filename.h  findname.c  findname.h  fpge.c  fpge.h  fpge_colors.c  fpge_colors.h  hash.c  help.c  help.h  hexedit.c  hexedit.h  lgeneral.c  lgeneral.h  load.c  load.h  maingui.c  maingui.h  (+56 more)
